# rss-cli

./: README.md  pyproject.toml  rss.json
rss_cli/: __init__.py  app.py
rss_cli/articles/: feeds.py
rss_cli/articles/models/: rss_model.py  twitter_model.py  youtube_model.py
rss_cli/data/: config.py
rss_cli/models/: __init__.py  rss_model.py
rss_cli/utils/: config_reader.py  default_config.py
rss_cli/view/: tui.py
rss_cli/view/articles/: article_card.py  articles_grid.py  base_article.py  full_article.py
rss_cli/view/css/: main.py
rss_cli/view/screens/: article_screen.py  main_screen.py  quit_screen.py
rss_cli/widgets/: article.py
rss_project/: __init__.py  __main__.py  app.py
rss_project/data/: __init__.py  articles.json  config.py  locations.py  rss.py
rss_project/messages/: __init__.py
rss_project/models/: __init__.py  rss_model.py
rss_project/screens/: __init__.py  main.py  search.py
rss_project/widgets/: __init__.py  articles.py  details.py  extended_option_list.py  tags.py
trash/: feed_details.py  feed_list.py  rss_screen.py
