[tool.poetry]
name = "rss-project"
version = "0.1.0"
description = ""
authors = ["Mohammed Alsahli <mohammed.saud.alsahli@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
textual = "^0.46.0"
requests = "^2.31.0"
rich = "^13.7.0"
feedparser = "^6.0.11"
beautifulsoup4 = "^4.12.2"
xdg-base-dirs = "^6.0.1"
pytz = "^2023.3.post1"
humanize = "^4.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
