[tool.poetry]
name = "rss-project"
version = "0.1.0"
description = ""
authors = ["Mohammed Alsahli <mohammed.saud.alsahli@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
rich = "^13.7.0"
feedparser = "^6.0.11"
beautifulsoup4 = "^4.12.2"
xdg-base-dirs = "^6.0.1"
importlib-metadata = "^7.0.1"
keyboard = "^0.13.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
