[tool.poetry]
name = "rss-cli"
version = "0.1.1"
description = "A rss feed in the terminal."
authors = ["Mohammed Alsahli <mohammed.saud.alsahli@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
rich = "^13.7.0"
feedparser = "^6.0.11"
beautifulsoup4 = "^4.12.2"
xdg-base-dirs = "^6.0.1"
importlib-metadata = "^7.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
rss-cli = "rss_cli.__main__:main"
rss = "rss_cli.__main__:main"